[package]
name = "step1"
version = "0.1.1"
edition = "2021"

# lib
[dependencies]
rand = "0.8.5"

# Outside bin Runfiles
[[bin]]
name = "generater"
path = "src/bin/generater.rs"

[[bin]]
name = "ordering"
path = "src/bin/ordering.rs"

[[bin]]
name = "variable"
path = "src/bin/variable.rs"

[[bin]]
name = "data-type"
path = "src/bin/data-type.rs"

[[bin]]
name = "array-ex"
path = "src/bin/array-ex.rs"

[[bin]]
name = "function"
path = "src/bin/function.rs"

[[bin]]
name = "regular"
path = "src/bin/regular.rs"

[[bin]]
name = "boolean"
path = "src/bin/boolean.rs"

[[bin]]
name = "loop"
path = "src/bin/loop.rs"